# gascity

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml  notify-image-build.yaml
cmd/gc/: adoption_barrier.go  adoption_barrier_test.go  agent_build_params.go  api_state.go  api_state_test.go  bd_env.go  bd_env_test.go  bead_reconcile_ops.go  bead_reconcile_ops_test.go  beads_provider_lifecycle.go  beads_provider_lifecycle_test.go  build_agent.go  build_desired_state.go  chat_autosuspend.go  chat_autosuspend_test.go  city_layout.go  city_layout_test.go  city_runtime.go  cmd_agent.go  cmd_agent_logs.go  cmd_agent_multi.go  cmd_agent_test.go  cmd_beads.go  cmd_beads_test.go  cmd_citystatus.go  cmd_daemon_test.go  cmd_doctor.go  cmd_handoff.go  cmd_handoff_test.go  cmd_hook.go  cmd_init.go  cmd_mail.go  cmd_memory.go  cmd_order.go  cmd_order_test.go  cmd_prime.go  cmd_register.go  cmd_register_test.go  cmd_restart.go  cmd_rig_test.go  (+60 more)
cmd/gc/dashboard/: api.go  api_fetcher.go  helpers.go
cmd/gc/prompts/: foreman.md  mayor.md
cmd/gc/skills/: agents.md  dispatch.md  rigs.md  sessions.md  work.md
cmd/gc/testdata/: agent-drain.txtar  errors.txtar  gastown-errors.txtar  gastown-order.txtar  init-provider.txtar  start-stop.txtar
contrib/demo/: README.md  SCRIPT.md  act1-pack-escalation.sh  peek-cycle.sh
contrib/gt-monitor-client/: README.md  gt_monitor_client.py  test_gt_monitor_client.py
docs/: exec-beads-protocol.md  feature-parity.md  gastown-upstream-audit.md  remove-agent-multi-migration.md  startup-roadmap.md
docs/architecture/: README.md  beads.md  config.md  controller.md  dispatch.md  event-bus.md  formulas.md  glossary.md  health-patrol.md  life-of-a-bead.md  life-of-a-molecule.md  nine-concepts.md  orders.md
docs/design/: agent-pools.md  api-ops-design.md  async-nudge-delivery.md  chat-sessions.md  city-layout-audit.md  external-messaging-fabric.md  index.md  machine-wide-supervisor-v0.md  workspace-publication-edge-security.md  workspace-service-publication.md
docs/reference/: cli.md  config.md
docs/schema/: city-schema.json
docs/tutorials/: 01-hello-gas-city.md  06-formulas.md  progression.md
examples/bd/: embed.go
examples/dolt/: embed.go  pack.toml
examples/dolt/commands/: cleanup.sh  health.sh  list.sh  logs.sh  recover.sh  sql.sh  start.sh  status.sh  sync.sh
examples/dolt/doctor/: check-dolt.sh
examples/dolt/formulas/: mol-dog-compactor.formula.toml  mol-dolt-health.formula.toml  mol-dolt-remotes-patrol.formula.toml
examples/gastown/: FUTURE.md  SDK-ROADMAP.md  city.toml  gastown_test.go
examples/wasteland-feeder/: pack.toml
examples/wasteland-feeder/formulas/: mol-wasteland-inference.formula.toml
gt-monitor/: Cargo.toml
gt-monitor/gt-monitor-config/: Cargo.toml
gt-monitor/gt-monitor-config/src/: lib.rs  provider.rs
gt-monitor/gt-monitor-core/: Cargo.toml
gt-monitor/gt-monitor-core/src/: capability.rs  engine.rs  error.rs  lib.rs  provider.rs  query.rs
gt-monitor/gt-monitor-git/: Cargo.toml
gt-monitor/gt-monitor-git/src/: lib.rs  provider.rs
gt-monitor/gt-monitor-gitea/: Cargo.toml
gt-monitor/gt-monitor-gitea/src/: client.rs  lib.rs  provider.rs
gt-monitor/gt-monitor-gitea/tests/: wiremock_tests.rs
gt-monitor/gt-monitor-otel/: Cargo.toml
gt-monitor/gt-monitor-otel/src/: lib.rs  provider.rs
gt-monitor/gt-monitor-server/: Cargo.toml
gt-monitor/gt-monitor-server/src/: lib.rs  routes.rs  state.rs
gt-monitor/gt-monitor-system/: Cargo.toml
gt-monitor/gt-monitor-system/src/: lib.rs  provider.rs
internal/agent/: event.go  hints.go  session_name.go
internal/api/: client.go  fake_state_test.go  handler_agent_logs.go  handler_agent_output.go  handler_agent_output_test.go  handler_agents.go  handler_agents_test.go  handler_beads.go  handler_beads_test.go  handler_memory.go  handler_memory_test.go  handler_provider_crud.go  handler_provider_crud_test.go  handler_providers.go  handler_session_chat.go  handler_sessions.go  handler_sessions_test.go  handler_sling.go  response_cache.go  server.go  session_manager.go  state.go  supervisor.go
internal/beads/: bdstore.go  bdstore_test.go  beads.go  beads_test.go  boundary_test.go  memstore.go  memstore_test.go
internal/beads/exec/: exec.go  exec_test.go
internal/buildimage/: context.go
internal/chatsession/: manager.go  manager_test.go
internal/citylayout/: layout.go
internal/config/: compose.go  compose_test.go  config.go  pack_test.go  provider.go  resolve.go  undecoded.go  validate_durations.go  validate_durations_test.go
internal/configedit/: configedit.go  configedit_test.go
internal/doctor/: checks.go
internal/events/: events.go  recorder.go
internal/extmsg/: binding_service.go  delivery_service.go  doc.go  errors.go  extmsg_test.go  group_service.go  helpers.go  labels.go  services.go  time.go  types.go
internal/formula/: compose.go  types.go
internal/hooks/: hooks.go  hooks_test.go
internal/hooks/config/: claude.json  copilot.json  cursor.json  gemini.json  omp.ts  opencode.js  pi.js
internal/orders/: gates.go  gates_test.go  order.go  order_test.go  override.go  scanner.go  scanner_test.go
internal/runtime/: fake.go  runtime.go
internal/runtime/acp/: acp.go
internal/session/: chat.go  chat_test.go  fake.go  manager.go  manager_states_test.go  manager_test.go
internal/sessionlog/: entry.go  reader.go  sessionlog_test.go  tail.go  tail_test.go
internal/supervisor/: publications.go  publications_test.go  registry.go  registry_test.go
internal/workdir/: workdir.go  workdir_test.go
internal/workspacesvc/: manager.go  manager_test.go  proxy_process_test.go
test/integration/: bdstore_test.go
(+69 files in other folders)
