[workspace]
resolver = "2"
members = [
    "gt-monitor-core",
    "gt-monitor-system",
    "gt-monitor-git",
    "gt-monitor-otel",
    "gt-monitor-config",
    "gt-monitor-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gastownhall/gascity"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
gt-monitor-core = { path = "gt-monitor-core" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
