[package]
name = "gt-monitor-config"
description = "Configuration provider for gt-monitor — agent configs, rig configs, town config, formulas, crontabs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gt-monitor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
