[package]
name = "gt-monitor-gitea"
description = "Gitea REST API provider for gt-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gt-monitor-core = { path = "../gt-monitor-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
