[package]
name = "gt-monitor-server"
description = "Axum HTTP API server for gt-monitor — /v1/* routes wrapping Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
gt-monitor-core.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["test-util"] }
